--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,14 @@
-python-telegram-bot
-pytube
-requests
-fake_useragent
+APScheduler==3.6.3
+certifi==2020.12.5
+chardet==4.0.0
+fake-useragent==0.1.11
+idna==2.10
+python-telegram-bot==13.3
+pytube==10.5.1
+pytz==2021.1
+requests==2.25.1
+six==1.15.0
+tornado==6.1
+typing-extensions==3.7.4.3
+tzlocal==2.1
+urllib3==1.26.3
